# cookiecutter-fastapi

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  alembic.ini  bitbucket-pipelines.yml  buildspec.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.github/: build.yml
{{cookiecutter.project_slug}}/alembic/: env.py
{{cookiecutter.project_slug}}/app/: router.py
{{cookiecutter.project_slug}}/app/chat/: router.py  schemas.py
{{cookiecutter.project_slug}}/celery_task/: celery_app.py  celery_logging.py
{{cookiecutter.project_slug}}/celery_task/tasks/: __init__.py
{{cookiecutter.project_slug}}/configs/: aws_config.py  common_config.py  gunicorn_conf.py
{{cookiecutter.project_slug}}/configs/database/: db.py
{{cookiecutter.project_slug}}/core/: constants.py  enumerate.py  exception_handlers.py  exceptions.py  http_client.py
{{cookiecutter.project_slug}}/core/decorators/: transactional.py
{{cookiecutter.project_slug}}/core/helpers/: defaults.py  jwt_helper.py  vector_store_helper.py
{{cookiecutter.project_slug}}/core/loggers/: app_logging.py  google_chat_logger.py
{{cookiecutter.project_slug}}/core/utils/: __init__.py  chatbot_utils.py  common_utils.py  datetime_utils.py  (+4 more)
{{cookiecutter.project_slug}}/nginx/: .htpasswd
{{cookiecutter.project_slug}}/scripts/: celery_beat.sh  celery_worker.sh  makemigrations  start-dev.sh  start-prod.sh
(+6 files in other folders)
